fixed the contact form layout, but it is not responsive!! The button and the textarea need to be fixed...

--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -48,17 +48,24 @@ h2 {
 /*  justify-content: center;
   align-items: center;*/
   margin: 15px auto;
-  width: 63%;
-  height: 70%;
+  width: 53%;
+  height: 80%;
   background-color: #E5E5E5;
   border-radius: 22px;
 
 }
 
 form {
-  margin-top: 20%;
+  margin-top: 13%;
   height: 80%;
 }
+
+ #form-title {
+  width: 80%;
+  margin: 46px auto;
+  font-weight: 600;
+  font-size: 21px;
+ }
 
 input {
   width: 80%;
@@ -71,7 +78,12 @@ input {
   border-bottom-style: ridge;
 }
 
-#message-input {
+textarea {
+  width: 80%;
+  margin-bottom: 15px;
+  background-color: white;
+  display: grid;
+  margin: 3px auto;
   border-style: ridge !important;
   height: 42%;
 }
@@ -79,14 +91,25 @@ input {
 #message-title {
   width: 80%;
   margin: auto;
+  font-weight: 600;
 }
 
 #button-input {
   border: none !important;
+  background-color: #ABABAB;
+  width: 33% !important;
+  border-radius: 3px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  padding: 6px;
+  font-weight: 600;
+  align-items: center;
 }
 
-::placeholder {
-  /*align-items: initial !important;*/
-  /*FIND A SOLUTION*/
+#button-input:hover {
+  opacity: 0.8;
 }
+
+
+
+
 
